[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
# OSS.3 (2026-06-02) / Q-OSS-1 RESOLVED: distribution name stays
# `decoy-engine`. The CLI dist renamed to `decoy-cli`; the engine
# library dist did not.
name = "decoy-engine"
version = "0.1.0"
description = "Data masking and synthetic generation engine. Validates pipeline configs, compiles execution plans, runs masking + generate jobs against pandas / polars substrates. Used by the decoy-cli CLI and the decoy-platform commercial product."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "louiskeep" }]

# PyPI Trove classifiers. OS-independent; Python 3.10/3.11/3.12;
# topic taxonomy that library callers search for. Library-only
# (Environment :: Other Environment, not Console).
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

keywords = [
    "data-masking",
    "synthetic-data",
    "anonymization",
    "pii",
    "privacy",
    "data-generation",
    "faker",
    "mimesis",
    "pandas",
    "polars",
    "decoy",
]

dependencies = [
    "pandas>=1.5.0,<4",
    "pyyaml>=6.0",
    "faker>=13.0.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    # Used by decoy_engine.disguises.schema for the Disguise model.
    # Was always required at runtime; was undeclared until benchmark CI
    # caught the gap on a fresh-environment install.
    "pydantic>=2.0",
    # Promoted from optional `[hybrid]` extras (Bug 1).
    # Phase 8 flipped `engine: hybrid` to the default, so a pandas-only
    # install would crash on first pipeline run with ModuleNotFoundError.
    # Both libs are now required to match the runtime contract.
    # Upper bound pinned in S11: Polars ships a major every ~6 months and the
    # expression surface evolves; the execution-substrate path is validated
    # against the 1.x I/O API, so cap below 2.0 until a 2.x validation pass.
    "polars>=1.0,<2.0",
    "duckdb>=0.10.0",
    # S14-CLOUD-SRC-S3GCS (2026-05-30): cloud sources are R1 marketed scope
    # (decoy_release_1_scope memory). boto3 was previously transitive via
    # moto[s3] in [dev] and platform-side; the engine's _load_s3_source +
    # platform's _fetch_s3_to_bytesio import it at function-call time, so
    # the production Compose image needs it declared. google-cloud-storage
    # ships alongside; the gcs extra below stays as a backwards-compat
    # marker. Dennis S14 gate B1 (2026-05-30): pyproject promote.
    "boto3>=1.26",
    "google-cloud-storage>=2.0",
    # QA Q16 (2026-05-30): execution/_transforms.py pins df.eval to engine=numexpr
    # so the Python-engine fallback (which can expose @var-based builtin escapes
    # for user-supplied filter / derive expressions) cannot trip silently.
    # numexpr is a hard runtime dependency, not optional.
    "numexpr>=2.8",
    # MG-3 / M2 (2026-05-31): the `nested` masking strategy walks each cell
    # as JSON and applies a child strategy to leaf values located by
    # JSONPath. jsonpath-ng (MIT) is the established, maintained
    # implementation; matches our posture for numexpr / polars (do not roll
    # our own parser). Required at import time of the nested strategy
    # module; absent imports fall back to a typed runtime error.
    "jsonpath-ng>=1.6",
    # SEC.1 / C1 (2026-06-03): user-supplied `formula` expressions evaluate
    # under simpleeval's restricted single-expression sandbox instead of
    # CPython eval() (which, even with empty __builtins__, was a known RCE via
    # ().__class__...__subclasses__). simpleeval (MIT) is the established,
    # maintained "safely evaluate one user expression" library; matches our
    # posture for numexpr / jsonpath-ng (do not roll our own AST sandbox).
    # Required at import time of decoy_engine.expressions.
    "simpleeval>=0.9.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # moto is used by S3 connector contract tests (Week 2 of Sprint G).
    # Pinned here so a fresh `pip install -e .[dev]` brings it along
    # rather than failing on the first import in test collection.
    "moto[s3]>=5.0",
    # The property suite (tests/property/test_mask_invariants.py, audit
    # remediation 2026-06-12) is part of the default test run; without
    # this pin CI fails at collection with ModuleNotFoundError.
    "hypothesis>=6.0",
]
# Linters are exact-pinned, not floored. ruff and mypy both ship new
# rules / error categories in minor releases that turn previously-green
# code red with no code change. CI (.github/workflows/ci.yml) installs
# these same versions; bump them deliberately alongside a lint pass.
lint = [
    "ruff==0.15.14",
    "mypy==2.1.0",
]
# engine-v2 S7: Mimesis is an OPTIONAL alternative provider backend. The
# default install does NOT pull it; MimesisAdapter imports behind a
# try/except and the default registry stays Faker/DecoyNative-only unless
# `mimesis` is installed AND a provider is in the adoption matrix.
mimesis = [
    "mimesis>=14.0",
]
# Sphinx + sphinx-autoapi build the API reference site published to
# GitHub Pages. Build from the repo root via `pip install -e .[docs]`
# then `make -C docs html`. CI lives at `.github/workflows/docs.yml`.
# Item 50 Phase E in the cross-repo plan.
docs = [
    "sphinx>=7,<9",
    "sphinx-autoapi>=3,<4",
    "furo>=2024.1",
    "myst-parser>=2,<5",
    "sphinx-copybutton>=0.5",
    "linkify-it-py>=2",
    # Renders ```mermaid fenced blocks in docs/architecture.md. Without this
    # Pygments treats `mermaid` as an unknown lexer and -W fails the build.
    "sphinxcontrib-mermaid>=0.9",
]
# First-party cloud-storage connector extras. S14-CLOUD-SRC-S3GCS
# promoted boto3 + google-cloud-storage to [project] dependencies (above)
# because R1 marketed scope includes cloud object storage and the
# extras-only model broke the production Compose image (Dennis S14 gate
# B1). The `gcs` extra below is now a no-op backwards-compat marker
# (already pulled by the base install); kept so existing `pip install -e .[gcs]`
# invocations still work. SFTP remains an opt-in extra pending S18.
gcs = []
sftp = ["paramiko>=3.0"]

# Project URLs surfaced on the PyPI sidebar.
[project.urls]
Homepage = "https://github.com/louiskeep/decoy-engine"
Repository = "https://github.com/louiskeep/decoy-engine"
Documentation = "https://github.com/louiskeep/decoy-engine/blob/main/README.md"
Issues = "https://github.com/louiskeep/decoy-engine/issues"
Changelog = "https://github.com/louiskeep/decoy-engine/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/decoy_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: informational performance benchmarks; not a regression gate",
    "perf: PERF.BASE.2/3 fixture + baseline tests; opt-in via -m perf",
    "golden: engine-v2 S1 golden fixture suite (CSVs + manifests under tests/fixtures/golden/); CI gates engine-v2 sprint work on these",
]

# ── Tooling baseline (V2.0-prep, sprint 1) ──────────────────────────────────
# Lint + type-check + format gate land before any structural V2 refactor so
# decomposition PRs run against the gate from day 1. Mypy starts at
# check_untyped_defs and escalates per-subpackage as touched (resolved
# question #2). See decoy-platform docs/audit/from-engine/v2-app-audit-findings-2026-06-02.md F-AUDIT for related items (moved out of this repo 2026-06-02).

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [".pytest_cache", "__pycache__", "logs", "mappings", "docs/_build"]

[tool.ruff.lint]
# Pragmatic selection. E501 (line length) is owned by ruff format so it
# stays out. S-rule false-positives in tests are handled via per-file
# ignores below. UP rules drive the gradual move to PEP 585 / 604.
select = ["E", "F", "I", "B", "SIM", "UP", "N", "PT", "S", "RUF"]
ignore = [
    "E501",   # line-too-long: handled by ruff format
    "S311",   # non-crypto random: legit in Faker seeding and generators
    "S608",   # hardcoded SQL: source.db ops build SQL on purpose; documented power-user surface
    "S110",   # try-except-pass: telemetry paths intentionally swallow
    "S112",   # try-except-continue: telemetry paths intentionally swallow
    "N806",   # non-lowercase var: math notation in stats/crypto modules
    "N803",   # non-lowercase arg: same reason
    "SIM105", # contextlib.suppress: marginal readability win; not worth churn
    "SIM102", # nested-if-collapse: sometimes clearer split
    "SIM108", # ternary-instead-of-if: ternaries are often less readable
    "E731",   # lambda assignment: occasional in callback wiring
    "B904",   # raise-without-from: cosmetic; high-volume; cleanup as touched
    "RUF012", # mutable-class-default: false positives on dataclass-like defaults
    # RUF002 / RUF003 (ambiguous unicode in docstrings / comments) are NOT
    # globally ignored: the no-em-dash repo rule extends to en-dash + smart
    # quotes, and the lint catches drift before it lands. The two intentional
    # math-notation callsites (× in fpe.py docstring + a test comment) carry
    # narrow per-file ignores below.
    "RUF013", # implicit-Optional: cleanup as touched; high-volume
]
[tool.ruff.lint.per-file-ignores]
# Tests can use assert (S101) and have lower naming bars. Additional
# test-only suppressions cover cosmetic pytest-style nits (PT018
# assertion-too-complex, PT006 parametrize tuple-vs-list, PT012/PT019
# fixture/raises body shape) and patterns legitimate in tests but
# loud under the broader src ratchet (S108 /tmp paths, SLF001 private
# member access in white-box tests).
#
# B017 (assert-raises-exception): white-box tests deliberately assert on a
#   broad Exception when the point is "the guard rejects", not which subclass.
# RUF043 (raises-ambiguous-pattern): pytest.raises(match=...) takes a regex;
#   the substring patterns used here are intentional and read fine unescaped.
# SIM117 (multiple-with): nested context managers are sometimes clearer in
#   arrange blocks; not worth churn in tests.
"tests/**" = [
    "S101", "S105", "S106", "S108",
    "N802", "N803", "N806",
    "PT011", "PT017", "PT018", "PT006", "PT012", "PT019",
    "SLF001",
    "B017", "RUF043", "SIM117",
]
# Connector contract tests intentionally use insecure hashing.
"tests/connectors/**" = ["S101", "S105", "S106", "S324"]
# Benchmark suite has measurement loops that look stylistically loud.
"tests/benchmark/**" = ["S101", "S105", "S106", "N802", "N806", "PT011"]
# Intentional design / math-notation exceptions (no removal trigger;
# the carve-out itself is the right behaviour):
# × (multiplication sign) is intentional math notation in the FPE
# docstring. Narrow to RUF002 so any other ambiguous-unicode
# regression still trips CI.
"src/decoy_engine/transforms/fpe.py" = ["RUF002"]
# Same character in a test comment ("2 cities × 2 statuses = 4 buckets")
# explaining a balanced-categoricals fixture; ASCII would obscure the
# product semantics.
"tests/unit/test_storm_reid_risk.py" = ["RUF003"]
# Empty-hook base classes intentionally swallow their body for
# subclasses to override.
"src/decoy_engine/internal/base.py" = ["B027"]
# Late-import-to-break-cycle pattern, documented in the module header.
"src/decoy_engine/internal/validator.py" = ["E402"]
"src/decoy_engine/sdk.py" = ["E402"]
# Imports sit next to the thematically-grouped sections they serve (name-hint
# loader by the _NAME_HINTS table; contextvars by the per-scan extras layer;
# dataclass by the Span/iter_spans block), each with its own explanatory
# header. Deliberate narrative layout, not a top-of-file omission.
"src/decoy_engine/storm/detectors.py" = ["E402"]

# Legacy modules scheduled for V2.1 hard deletion (per the V2 sprint
# plan + v2-roadmap Phase 1 Sprint 5). Each entry deletes with its
# file. Adding a new entry here without a V2.1 tag is a review
# blocker.
# V2.1 delete: legacy Masker pipeline.
"src/decoy_engine/masker/processor.py" = ["E701"]
# V2.1 delete: legacy DataGenerator.
"src/decoy_engine/generators/generator.py" = ["F841"]
"src/decoy_engine/generators/relationships.py" = ["F841"]
# V2.1 delete: legacy connector base + fixed-width path; cloud
# connectors (s3/gcs/sftp) survive but the abstract base class
# pattern collapses when Masker dies.
"src/decoy_engine/connectors/base.py" = ["B027"]
"src/decoy_engine/connectors/fixed_width.py" = ["SIM113"]
# V2.1 delete: legacy large-file processor wired through Masker.
"src/decoy_engine/internal/large_file_processor.py" = ["SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
target-version = ["py310"]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
(
    /__pycache__
  | /\.pytest_cache
  | /logs
)
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
# Per-subpackage strict-mode escalation lands alongside structural work
# in V2.0-A / V2.0-B / V2.0-C. The Sprint A modules below are at strict
# already; the legacy/pre-V2 modules carry bounded per-code allowlists
# that V2.0-B/C/V2.1 will shrink.

# V2.0-A Sprint A bar: modules created or refactored by the runner
# decomposition get the full --strict treatment. New code lands here
# from V2.0-B/C as those sprints touch their respective subpackages.
# Per-module override expanded into individual flags because mypy 2.x
# does not recognize `strict = true` as a per-module key (only as a
# global one); listing each strict-mode flag explicitly keeps the gate
# scoped to the listed modules.
[[tool.mypy.overrides]]
module = [
    # V2.0-A Sprint A modules (runner decomposition).
    "decoy_engine.graph.run_state",
    "decoy_engine.graph.memory_monitor",
    "decoy_engine.graph._fk_validators",
    "decoy_engine.graph.executor",
    "decoy_engine.graph.planner",
    "decoy_engine.graph.runner",
    # V2.0-B Sprint B modules (validator split + normalize_config).
    "decoy_engine.graph.normalize",
    "decoy_engine.graph.validators",
    "decoy_engine.graph.validators._shared",
    "decoy_engine.graph.validators.top_level",
    "decoy_engine.graph.validators.nodes",
    "decoy_engine.graph.validators.edges",
    "decoy_engine.graph.validators.cross_node",
    # V2.0-C Sprint C modules (public boundary + helpers split).
    "decoy_engine.errors",
    "decoy_engine.providers",
    "decoy_engine.internal.crypto",
    "decoy_engine.internal.fs",
    "decoy_engine.internal.faker_setup",
    # V2 Phase 3 Sprint D1a (Distribution Integrity: snapshot foundation).
    "decoy_engine.quality",
    "decoy_engine.quality.snapshot",
    # V2 Phase 3 Sprint D1b (Distribution Integrity: diagnostic structural checks).
    "decoy_engine.quality.diagnostic",
    # V2 Phase 3 Sprint D1c (Distribution Integrity: fidelity scoring).
    "decoy_engine.quality.fidelity",
    # V2 Phase 3 Sprint D1d (Distribution Integrity: QualityReport assembly).
    "decoy_engine.quality.report",
    # V2 Phase 3 Sprint D4 (Distribution Integrity: strategy-aware policy).
    "decoy_engine.quality.policy",
    # V2 Phase 3 Sprint D5b (Distribution Integrity: shape-only fidelity).
    "decoy_engine.quality.shape_fidelity",
    # V2 PERF.BASE.1 (per-strategy timing + per-node memory instrumentation).
    "decoy_engine.instrumentation",
    "decoy_engine.instrumentation.timing",
    # engine-v2 S1 (Profile module: dataclasses + hash + serialization +
    # DataFrame walker + STORM PII bridge). Spec:
    # docs/v2/sprints/engine-v2/sprint-01-profile-plan-and-fixtures.md
    # in decoy-platform.
    "decoy_engine.profile",
    "decoy_engine.profile._types",
    "decoy_engine.profile._hash",
    "decoy_engine.profile._serialize",
    "decoy_engine.profile._walk",
    "decoy_engine.profile._pii",
    # engine-v2 S1 fixture-suite slice (golden fixtures schema; build script
    # under scripts/ is intentionally not strict-mode-checked, the schema
    # under tests/fixtures/ is).
    "tests.fixtures.golden._manifest_schema",
    # engine-v2 S1 planner slice (Plan dataclass + compile_plan + 5 checks).
    "decoy_engine.plan",
    "decoy_engine.plan._types",
    "decoy_engine.plan._errors",
    "decoy_engine.plan._registry_stub",
    "decoy_engine.plan._checks",
    "decoy_engine.plan._compile",
    "decoy_engine.plan._serialize",
    # engine-v2 S10 (Validator: compile consolidator + post-validation). Spec:
    # docs/v2/sprints/engine-v2/sprint-10-validator.md in decoy-platform.
    "decoy_engine.plan.validate",
    "decoy_engine.plan.validate._consolidator",
    "decoy_engine.validation",
    "decoy_engine.validation.post",
    "decoy_engine.validation.post._types",
    "decoy_engine.validation.post._runner",
    "decoy_engine.validation.post._scan",
    "decoy_engine.validation.post._checks",
    "decoy_engine.validation.post._checks._pk_uniqueness",
    "decoy_engine.validation.post._checks._cardinality",
    "decoy_engine.validation.post._checks._format_rules",
    "decoy_engine.validation.post._checks._composite_coherence",
    "decoy_engine.validation.post._checks._null_audit",
    "decoy_engine.validation.post._checks._leakage",
    "decoy_engine.validation.post._checks._sampled_values",
    "decoy_engine.validation.post._checks._fk_validity",
    "decoy_engine.validation.post._checks._determinism_sample",
    # engine-v2 S2 (Relationship Coordinator + Namespace). Spec:
    # docs/v2/sprints/engine-v2/sprint-02-relationship-coordinator-and-namespace.md
    # in decoy-platform. Per best-practices §5.4 (resolution of S2 M4):
    # package-level entry alone is insufficient because submodules fall
    # back to the more permissive default unless listed explicitly.
    "decoy_engine.relationships",
    "decoy_engine.relationships._graph",
    "decoy_engine.relationships._namespace",
    # engine-v2 S3 (Determinism Layer). Spec:
    # docs/v2/sprints/engine-v2/sprint-03-determinism-layer.md in
    # decoy-platform. Per best-practices §5.4: enumerate submodules
    # explicitly so the strict gate covers the full surface.
    "decoy_engine.determinism",
    "decoy_engine.determinism._derive",
    "decoy_engine.determinism._hkdf",
    # engine-v2 S4 (Provider Registry + Faker Adapter). Spec:
    # docs/v2/sprints/engine-v2/sprint-04-provider-registry-and-faker-adapter.md
    # in decoy-platform. Per best-practices §5.4 + S4 spec §Done state.
    # Ships alongside V1's decoy_engine.providers per the B1 PO call;
    # V1 module stays as-is (not added to strict overrides; V2.1 deletes).
    "decoy_engine.providers_v2",
    "decoy_engine.providers_v2._adapter",
    "decoy_engine.providers_v2._errors",
    "decoy_engine.providers_v2._faker_adapter",
    "decoy_engine.providers_v2._real_registry",
    "decoy_engine.providers_v2._registry",
    # engine-v2 S6 (Custom Identifier Generators). Spec:
    # docs/v2/sprints/engine-v2/sprint-06-custom-identifier-generators.md
    # in decoy-platform. Per best-practices §5.4 + S6 spec §Done state.
    "decoy_engine.providers_v2.identifiers",
    "decoy_engine.providers_v2.identifiers._ein",
    "decoy_engine.providers_v2.identifiers._errors",
    "decoy_engine.providers_v2.identifiers._mrn",
    "decoy_engine.providers_v2.identifiers._ndc",
    "decoy_engine.providers_v2.identifiers._npi",
    "decoy_engine.providers_v2.identifiers._ssn",
    "decoy_engine.providers_v2.identifiers._validate",
    # engine-v2 S7 (Mimesis Adapter, conditional adoption). Spec:
    # docs/v2/sprints/engine-v2/sprint-07-mimesis-adapter.md in decoy-platform.
    # Per best-practices §5.4 + S7 spec §1. Optional dep: the modules import
    # mimesis behind a guard, but the strict gate still covers the source.
    "decoy_engine.providers_v2.mimesis",
    "decoy_engine.providers_v2.mimesis._adapter",
    "decoy_engine.providers_v2.mimesis._adoption_matrix",
    "decoy_engine.providers_v2.mimesis._parity",
    # engine-v2 S5 (Pool Manager). Spec:
    # docs/v2/sprints/engine-v2/sprint-05-pool-manager.md in decoy-platform.
    # Per best-practices §5.4 + S5 spec §Done state.
    "decoy_engine.generation",
    "decoy_engine.generation.pool",
    "decoy_engine.generation.pool._builder",
    "decoy_engine.generation.pool._cache",
    "decoy_engine.generation.pool._canonicalize",
    "decoy_engine.generation.pool._cardinality",
    "decoy_engine.generation.pool._errors",
    "decoy_engine.generation.pool._events",
    "decoy_engine.generation.pool._pool_adapter",
    "decoy_engine.generation.pool._sampler",
    "decoy_engine.generation.pool._validate",
    "decoy_engine.generation.pool._value_pool",
    # engine-v2 S8 (Composite Generators). Spec:
    # docs/v2/sprints/engine-v2/sprint-08-composite-generators.md in decoy-platform.
    # Per best-practices §5.4 + S8 spec §1.
    "decoy_engine.generation.composite",
    "decoy_engine.generation.composite._bundle_pool",
    "decoy_engine.generation.composite._city_state_zip",
    "decoy_engine.generation.composite._errors",
    "decoy_engine.generation.composite._generator",
    "decoy_engine.generation.composite._name_email",
    "decoy_engine.generation.composite._validate",
    # engine-v2 S9 (Execution Adapter, pandas). Spec:
    # docs/v2/sprints/engine-v2/sprint-09-execution-adapter-pandas.md in decoy-platform.
    # Per best-practices §5.4 + S9 spec §Done state. Slice 1: runner core; later
    # slices add the adapter + strategies modules.
    "decoy_engine.execution",
    "decoy_engine.execution._adapter",
    "decoy_engine.execution._errors",
    "decoy_engine.execution._events",
    "decoy_engine.execution._pandas_adapter",
    "decoy_engine.execution._runner",
    "decoy_engine.execution._strategies",
    "decoy_engine.execution._strategies._bucketize",
    "decoy_engine.execution._strategies._categorical",
    "decoy_engine.execution._strategies._composite",
    "decoy_engine.execution._strategies._date_shift",
    "decoy_engine.execution._strategies._faker",
    "decoy_engine.execution._strategies._formula",
    "decoy_engine.execution._strategies._fpe",
    "decoy_engine.execution._strategies._hash",
    "decoy_engine.execution._strategies._orphan",
    "decoy_engine.execution._strategies._passthrough",
    "decoy_engine.execution._strategies._redact",
    "decoy_engine.execution._strategies._shuffle",
    "decoy_engine.execution._strategies._truncate",
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
# Third-party libs without type stubs. Listed individually so a new
# missing-stubs surface trips review instead of silently passing.
module = [
    "duckdb",
    "duckdb.*",
    "faker",
    "faker.*",
    # mimesis (MIT) is an optional alternative provider backend (the
    # `mimesis` extra); imported at module top in providers_v2.mimesis,
    # not installed in default-extras CI.
    "mimesis",
    "mimesis.*",
    "pandas",
    "pandas.*",
    "polars",
    "polars.*",
    "psutil",
    "psutil.*",
    "pyarrow",
    "pyarrow.*",
    "yaml",
    # simpleeval (MIT) ships no stubs / py.typed; imported by
    # decoy_engine.expressions for the formula sandbox.
    "simpleeval",
    # jsonpath-ng ships no stubs; imported by the nested masking strategy.
    "jsonpath_ng",
    "jsonpath_ng.*",
    # Cloud SDKs ship no usable stubs for our call surface; imported
    # function-locally in decoy_engine.profile._source.
    "boto3",
    "botocore",
    "botocore.*",
    "google.cloud",
    "google.cloud.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Bounded shrink-only allowlist for pre-V2 type debt.
#
# Replaces an earlier blanket `ignore_errors = true` per module, which let
# arbitrary new error categories slip in silently. Now each legacy module
# enumerates the specific error codes that fire today; any code that is
# NOT on the list still trips CI for that module. Removing a code from a
# list is allowed (it tightens the gate); adding one requires a comment
# explaining the new debt category and which sprint will close it.
#
# Each module is also tagged with its scheduled deletion or refactor
# sprint per the V2 sprint plan; V2.1 entries vanish with the files,
# V2.0-B/C entries shrink as those sprints land.
# ---------------------------------------------------------------------------

# masker.masker — V2.1 hard delete (legacy IOHandler-bound Masker).
[[tool.mypy.overrides]]
module = ["decoy_engine.masker.masker"]
disable_error_code = ["attr-defined"]

# generators.* — V2.1 hard delete (legacy DataGenerator).
[[tool.mypy.overrides]]
module = ["decoy_engine.generators.generator"]
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = ["decoy_engine.generators.relationships"]
disable_error_code = ["call-arg"]

# generators.columns — V2.1 hard delete. `index` debt surfaced by
# V2.0-C tightening deterministic_hash to return str | None; the
# callsite filters nulls upstream so the slice is safe. `arg-type`:
# year-bin parsing calls int()/float() on config dict values typed
# Any | None and catches the TypeError on None deliberately; the guard
# is the runtime contract, not a type to refine in a doomed module.
[[tool.mypy.overrides]]
module = ["decoy_engine.generators.columns"]
disable_error_code = ["index", "arg-type"]

# transforms.{hash,categorical,faker_based} — V2.1 candidates for the
# legacy V1 Masker stack. `index` / `return-value` debt is the same
# str|None pattern surfaced by the V2.0-C deterministic_hash tightening;
# the V2.0-D transform-pipeline refactor clears them.
[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.hash"]
disable_error_code = ["index"]

[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.categorical"]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.faker_based"]
disable_error_code = ["index"]

# internal.* type-debt allowlist. V2.0-C split internal/helpers.py into
# crypto/fs/faker_setup (now strict-gated). What remains in internal/
# is the V1 legacy stack that V2.1 hard-deletes.

# V1 legacy IOHandler base class. V2.1 delete with the Masker stack.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.base"]
disable_error_code = ["import-untyped"]

# V1 legacy Masker large-file path. V2.1 delete.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.large_file_processor"]
disable_error_code = ["assignment"]

# V1 legacy logging wrapper. V2.0-D / V2.1 audits replacement with the
# context.Logger Protocol everywhere.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.logging"]
disable_error_code = ["assignment"]

# V1 legacy MaskerConfigValidator + GeneratorConfigValidator. V2.1
# delete; the V2 graph validator stack (decoy_engine.graph.validators)
# is the replacement.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.validator"]
disable_error_code = ["attr-defined", "index"]

# connectors.* — V1.5 DB-connector cleanup + V2.0-C boundary; for now
# every connector enumerates its own debt categories independently so the
# V1.5 sweep can shrink each list one connector at a time.
[[tool.mypy.overrides]]
module = ["decoy_engine.connectors"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.csv_connector"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.database"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.factory"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.fixed_width"]
disable_error_code = ["arg-type", "no-redef", "return-value", "var-annotated"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.gcs"]
disable_error_code = ["attr-defined", "import-untyped"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.s3"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.sftp"]
disable_error_code = ["attr-defined", "call-arg", "import-untyped"]

# transforms.registry — V2.0-B validator-split sprint refactors the
# strategy registry; abstract + var-annotated debt clears with it.
[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.registry"]
disable_error_code = ["abstract", "assignment", "attr-defined", "var-annotated"]

[tool.coverage.run]
source = ["src/decoy_engine"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Coverage is not gated as part of V2.0-prep. The configuration exists so
# `pytest --cov` produces useful output for V2.0-A's per-module unit-test
# work. A floor lands once V2.0-C closes and the test surface stabilizes.
fail_under = 0
